[gd_scene load_steps=5 format=3 uid="uid://cc0meviethdh8"]

[ext_resource type="Script" path="res://pause.gd" id="1_8e3j3"]
[ext_resource type="Texture2D" uid="uid://jsrea88hmguy" path="res://ui/desks/bigdeskui.png" id="2_dee34"]
[ext_resource type="Texture2D" uid="uid://c0gwq8hmmp3wd" path="res://ui/desks/deskui.png" id="3_y74wd"]
[ext_resource type="FontFile" uid="uid://cjsn6sorvmyt6" path="res://demo/assets/fonts/8bitOperatorPlusSC-Bold.ttf" id="4_vmq4p"]

[node name="Pause" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8e3j3")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -48.92
offset_bottom = -48.92
grow_horizontal = 2
grow_vertical = 2

[node name="Board1" type="Sprite2D" parent="CenterContainer"]
texture_filter = 1
position = Vector2(1, -5)
texture = ExtResource("2_dee34")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.5
offset_top = -105.0
offset_right = 61.5
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2

[node name="continue" type="TextureButton" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("3_y74wd")

[node name="continueLabel" type="RichTextLabel" parent="VBoxContainer/continue"]
layout_mode = 0
offset_left = 6.0
offset_top = -3.0
offset_right = 116.0
offset_bottom = 37.0
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("4_vmq4p")
theme_override_font_sizes/normal_font_size = 20
text = "continue"

[node name="sound" type="TextureButton" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 4
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("3_y74wd")

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/sound"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_top = -1.0
offset_right = 56.0
offset_bottom = 99.0
grow_horizontal = 2

[node name="soundLabel" type="RichTextLabel" parent="VBoxContainer/sound/CenterContainer"]
texture_filter = 1
custom_minimum_size = Vector2(120, 100)
layout_mode = 2
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("4_vmq4p")
theme_override_font_sizes/normal_font_size = 18
text = "sound: on"
scroll_active = false

[node name="to menu" type="TextureButton" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 1
texture_normal = ExtResource("3_y74wd")

[node name="tomenuLabel" type="RichTextLabel" parent="VBoxContainer/to menu"]
texture_filter = 1
layout_mode = 0
offset_left = 36.0
offset_top = -2.0
offset_right = 98.0
offset_bottom = 38.0
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("4_vmq4p")
theme_override_font_sizes/normal_font_size = 20
text = "exit
"

[connection signal="button_down" from="VBoxContainer/continue" to="." method="_on_continue_button_down"]
[connection signal="toggled" from="VBoxContainer/sound" to="." method="_on_sound_toggled"]
[connection signal="button_down" from="VBoxContainer/to menu" to="." method="_on_to_menu_button_down"]
